# pico-embedded-cli

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
